--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -5,4 +5,11 @@
     android:background="@color/colorDefaultWhite"
     android:fitsSystemWindows="true"
     tools:context="com.igor040897.vkgroup.ui.fragment.NewFeedFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+
 </RelativeLayout>
